--- a/src/DevIO.App/Views/Produtos/Index.cshtml
+++ b/src/DevIO.App/Views/Produtos/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DevIO.App.ViewModels.ProdutoViewModel>
 
 @{
-    ViewData["Title"] = "Lisa de Produtos";
+    ViewData["Title"] = "Lista de Produtos";
 }
 
 <h1>@ViewData["Title"]</h1>
