--- a/src/DevIO.App/Views/Produtos/Create.cshtml
+++ b/src/DevIO.App/Views/Produtos/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DevIO.App.ViewModels.ProdutoViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Novo Produto";
 }
 
 <h3 style="padding-top: 50px">@ViewData["Title"] </h3>
